# shieldbot

./: README.md  action.yml  pyproject.toml
.claude-plugin/: marketplace.json
.claude/agents/: shieldbot.md
.github/workflows/: security.yml  shieldbot-example.yml
plugins/shieldbot/: README.md
plugins/shieldbot/.claude-plugin/: plugin.json
plugins/shieldbot/agents/: shieldbot.md
plugins/shieldbot/skills/shieldbot/: SKILL.md
shieldbot/: __init__.py  config.py  run_scan.py  server.py
shieldbot/fixers/: __init__.py  dockerfile_fixer.py
shieldbot/reporters/: console_reporter.py
shieldbot/scanners/: __init__.py  codeql_scanner.py  dependabot_scanner.py  trivy_scanner.py
shieldbot/tools/: __init__.py  installer.py
