[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shieldbot-mcp"
version = "1.0.5"
description = "AI-powered security code review MCP server for Claude Code — combines CodeQL, Semgrep (5,000+ rules), bandit, detect-secrets, Dependabot CLI, osv-scanner, Trivy (Docker image scanning), pip-audit, and npm-audit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["security", "mcp", "code-review", "sast", "claude", "anthropic", "semgrep", "vulnerability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "anyio>=4.0.0",
    "GitPython>=3.1.0",
    # Scanners (installed separately or via extras)
    "semgrep>=1.50.0",
    "bandit>=1.7.0",
    "ruff>=0.1.0",
    "detect-secrets>=1.4.0",
    "pip-audit>=2.6.0",
]

[project.optional-dependencies]
dev = ["hatchling", "pytest", "pytest-asyncio"]

[project.scripts]
shieldbot-mcp     = "shieldbot.server:main"
shieldbot-install = "shieldbot.tools.installer:main"

[project.urls]
Homepage = "https://github.com/BalaSriharsha/shieldbot"
Repository = "https://github.com/BalaSriharsha/shieldbot"
"Bug Tracker" = "https://github.com/BalaSriharsha/shieldbot/issues"

[tool.hatch.build.targets.wheel]
packages = ["shieldbot"]

[tool.hatch.build.targets.sdist]
include = [
    "/shieldbot",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
